--- a/app/views/welcome/getting_started.html.slim
+++ b/app/views/welcome/getting_started.html.slim
@@ -22,7 +22,7 @@
 			p Find the torrent of interest and click the green "Download" button. Back in uTorrent client, click the "Add" button, and select the torrent file you just downloaded. You should now see the torrent listed in the main window pane of uTorrent with a status of "Downloading".
 			= image_tag 'utorrent-add.png', class: 'img-responsive img-thumbnail'
 			p It may take a few minutes for uTorrent to start downloading the data. Be patient! Everything is fine as long as uTorrent doesn't report any errors. You can check the status of the network via the dashboard for a handy map and list of peers. (Your client can provide some of this as well.)
-			= image_tag 'status.png', class: 'img-responsive img-thumbnail'
+			= image_tag 'map.png', class: 'img-responsive img-thumbnail'
 			
 
 
