--- a/app/views/feeds/_form.html.slim
+++ b/app/views/feeds/_form.html.slim
@@ -24,9 +24,9 @@ form#update_feed_form role="form" name="update_feed_form"
 	
 .row
 	.col-md-9
-		button.btn.btn-primary.btn-lg type="submit" ng-click="updateFeed()" ng-disabled="update_feed_form.$invalid"
+		button.btn.btn-primary.btn-lg type="submit" ng-click="updateFeed()" ng-disabled="update_feed_form.$invalid" ng-show="selectedFeed.can_update"
 			= text_with_icon('Save', 'floppy-disk')
 	.col-md-3
-		button.btn.btn-lg.btn-danger ng-click="deleteFeed(selectedFeed)" ng-confirm-click="This will permanently delete the feed and all torrents from the system. Existing subscribers will no longer receive data. This cannot be undone. Are you completely 100% sure you want to delete this feed?"
+		button.btn.btn-lg.btn-danger ng-click="deleteFeed(selectedFeed)" ng-confirm-click="This will permanently delete the feed and all torrents from the system. Existing subscribers will no longer receive data. This cannot be undone. Are you completely 100% sure you want to delete this feed?" ng-show="selectedFeed.can_delete"
 			= text_with_icon('Delete this feed forever!', 'trash')
 
