--- a/app/views/torrents/_form.html.slim
+++ b/app/views/torrents/_form.html.slim
@@ -10,7 +10,7 @@ form#torrent_form name="torrent_form"
 	.form-group
 		label for="torrent_file"
 		input#torrent_file.form-control type="file" name="file" ng-model="newTorrent.torrent.file" accept="application/x-bittorrent, *.torrent"
-	.text-danger ng-bind="newTorrent.errorMessage" ng-if="newTorrent.errorMessage"
+	.text-danger ng-bind="newTorrent.errorMessage" ng-show="newTorrent.errorMessage"
 	button.btn.btn-primary.btn-lg type="submit" ng-click="createTorrent()" ng-disabled="torrent_form.$invalid"
 		span.glyphicon.glyphicon-floppy-disk
 		|  Save
