--- a/app/views/welcome/dashboard.html.slim
+++ b/app/views/welcome/dashboard.html.slim
@@ -2,7 +2,7 @@
 - content_for :body_class do 'dashboard' end
 
 
-#dashboard ng-controller="FeedController"
+#dashboard ng-controller="FeedController" admin-controls="#{current_user.admin}"
 	= render partial: 'welcome/dialogs'
 
 	#sidebar-wrapper ng-include="'/dashboard/feeds'"
@@ -16,7 +16,7 @@
 						li.active
 							a href="#torrents" data-toggle="tab"
 								h3 = text_with_icon('Torrents', 'file')
-						li ng-if="selectedFeed.can_update"
+						li ng-show="selectedFeed.can_update"
 							a href="#settings" data-toggle="tab"
 								h3 = text_with_icon('Settings', 'wrench')
 					
@@ -24,7 +24,7 @@
 					.tab-content
 						.tab-pane.active#torrents
 							ng-include src="'/dashboard/torrents'"
-						.tab-pane#settings ng-if="selectedFeed.can_update"
+						.tab-pane#settings ng-show="selectedFeed.can_update"
 							ng-include src="'/dashboard/settings'"
 
 
