--- a/app/views/welcome/torrents.html.slim
+++ b/app/views/welcome/torrents.html.slim
@@ -20,7 +20,7 @@
 				b ng-bind="selectedFeed.replication_percentage" 
 				| % per peer per torrent.
 	.col-md-3
-		div ng-if="selectedFeed.can_update"
+		div ng-show="selectedFeed.can_update"
 			h1 &nbsp;
 			button.btn.btn-primary href="#create_torrent_dialog" role="button" ng-click="newTorrentDialog()"
 				span.glyphicon.glyphicon-upload
@@ -31,8 +31,8 @@
 .row
 
 	.col-md-12
-		h1.lead ng-if="selectedFeed.torrents.length == 0" No torrents have been published to 	{{selectedFeed.name}}!
-		table.table.table-condensed#feed_torrents ng-if="selectedFeed.torrents.length > 0"
+		h1.lead ng-show="selectedFeed.torrents.length == 0" No torrents have been published to 	{{selectedFeed.name}}!
+		table.table.table-condensed#feed_torrents ng-show="selectedFeed.torrents.length > 0"
 		  thead
 			tr
 				th
@@ -58,11 +58,11 @@
 			  td
 			  	a.btn.btn-primary href="/feeds/{{selectedFeed.slug}}/torrents/{{torrent.slug}}.torrent" = text_with_icon('Download', 'download')
 
-	.col-md-6 ng-if="selectedTorrent.active_peers.length == 0"
+	.col-md-6 ng-show="selectedTorrent.active_peers.length == 0"
 		h1 No peers for this torrent.
 		.lead Time to make some friends?
 
-	.col-lg-6#active_peers ng-if="selectedTorrent.active_peers.length > 0"
+	.col-lg-6#active_peers ng-show="selectedTorrent.active_peers.length > 0"
 		h3
 			|  Authenticated Peers
 			span.badge ng-bind="selectedTorrent.active_peer_count(true)"
@@ -85,7 +85,7 @@
 					/ th
 						a ng-click="reverse = !reverse; predicate = 'updated_at'; " Last Registered
 				tbody
-					tr ng-repeat="peer in selectedTorrent.active_peers" ng-if="!peer.volunteer_enabled"
+					tr ng-repeat="peer in selectedTorrent.active_peers" ng-show="!peer.volunteer_enabled"
 						td ng-bind="peer.user.name"
 						td
 							span ng-bind="peer.ip"
@@ -99,8 +99,8 @@
 							br
 							small#longitude ng-bind="peer.country_name" ng-show="peer.country_name"
 						td
-							span ng-if="peer.left > 0" Leeching
-							span ng-if="peer.left == 0" Seeding
+							span ng-show="peer.left > 0" Leeching
+							span ng-show="peer.left == 0" Seeding
 						td ng-bind="peer.left | humanizeBytes"
 						td ng-bind="peer.uploaded | humanizeBytes"
 
@@ -122,7 +122,7 @@
 					th
 						a ng-click="reverse = !reverse; predicate = 'volunteer_disk_used_bytes'; " Total Usage
 				tbody
-					tr ng-repeat="peer in selectedTorrent.active_peers" ng-if="peer.volunteer_enabled"
+					tr ng-repeat="peer in selectedTorrent.active_peers" ng-show="peer.volunteer_enabled"
 						td ng-bind="peer.user.name"
 						td
 							span ng-bind="peer.ip"
@@ -136,8 +136,8 @@
 							br
 							small#longitude ng-bind="peer.country_name" ng-show="peer.country_name"
 						td
-							span ng-if="peer.left > 0" Leeching
-							span ng-if="peer.left == 0" Seeding
+							span ng-show="peer.left > 0" Leeching
+							span ng-show="peer.left == 0" Seeding
 						td
 							span ng-bind="peer.volunteer_disk_used_bytes | humanizeBytes"
 							| /
@@ -151,12 +151,12 @@
 		h3 ng-bind="selectedTorrent.name"
 		a.btn.btn-primary ng-click="updateTorrent()" ng-show="selectedTorrent.can_update"
 					= text_with_icon('Save', 'floppy-disk')
-		a.btn.btn-danger.pull-right ng-click="deleteTorrent(selectedTorrent)" ng-show="selectedTorrent.can_delete" ng-confirm-click="Are you sure?"
+		a.btn.btn-danger.pull-right ng-click="deleteTorrent(selectedTorrent)" ng-show="selectedFeed.can_update" ng-confirm-click="Are you sure?"
 					= text_with_icon('Delete', 'trash')
 		form#edit_torrent_form role="form" ng-submit="updateTorrent()"
 			.form-group
 				label for="name" Name
-				input#torrent_name.form-control type="text" ng-model="selectedTorrent.name" ng-if="selectedFeed.can_update"
+				input#torrent_name.form-control type="text" ng-model="selectedTorrent.name" ng-show="selectedFeed.can_update"
 		dl.dl-horizontal
 			dt Created
 			dd ng-bind="selectedTorrent.created_at | relativeDate"
