--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -28,6 +28,11 @@ header.navbar.navbar-default role="banner"
             li = link_to 'System Concepts', concepts_path
             li = link_to 'Deployment Options', deployment_path
             li = link_to 'FAQ', faq_path
+            / # li = link_to 'Volunteer Client', volunteer_path
+            li class="divider"
+            li = link_to 'Bug Reports', 'https://github.com/preston/bittorious/issues'
+            li = link_to 'Feature Requests', 'https://github.com/preston/bittorious/issues'
+            li = link_to 'Source Code', 'https://github.com/preston/bittorious'
             li class="divider"
             li = link_to 'Legal', legal_path
 
