--- a/app/views/welcome/landing.html.slim
+++ b/app/views/welcome/landing.html.slim
@@ -75,7 +75,7 @@
 	section.row
 		/ hr
 		.col-md-4
-			h1.icon.icon-upload.icon-large
+			h1.glyphicon.glyphicon-upload
 				|  Publish
 			hr
 			p Sharing starts by creating a .torrent file right where your data lives, using either a supported BitTorrent client or command-line script. If you're already familiar with BitTorrent, we add a few concepts to support:
@@ -90,13 +90,13 @@
 				li Free client software.
 
 		.col-md-4
-			h1.icon.icon-rss.icon-large
+			h1.glyphicon.glyphicon-exclamation-sign
 				|  Subscribe
 			hr
 			p Authorized users may subscribe to data feeds via an RSS-capable clients to automatically initiate transfers as soon as data is published. Additionally, metadata indexing within the BitTorious web application allows for quick retrievel of previously-published data torrents. Unlike FTP, more subscribers results in *faster* data transfers.
 			P BitTorious enables data sets replication with SSL encryption, authentication, and role-based authorization, adding security to the standardized BitTorrent protocol while remaining true to the open standards upon which it's built.
 		.col-md-4
-			h1.icon.icon-download.icon-large
+			h1.glyphicon.glyphicon-download
 				|  Download
 			hr
 			p Data is distributed via BitTorrent with several extensions, providing a number of great benefits:
