--- a/app/views/welcome/landing.html.slim
+++ b/app/views/welcome/landing.html.slim
@@ -9,7 +9,9 @@
 		
 			.col-md-8#overview_carousel
 				h1 Big Data Collaboration
-				p.lead Securely exchange massive data sets amongst private communities over the Internet.
+				p.lead
+					|  Securely exchange massive data sets amongst private communities over the Internet. 
+					= image_tag('logo/icon-128x128.png', width: 32, style: 'display: inline')
 				= render partial: 'welcome/carousel'
 				/ = image_tag 'dashboard.png', class: 'img-responsive img-thumbnail'
 				p.text-center
