--- a/volunteer/app/stylesheets/app.less
+++ b/volunteer/app/stylesheets/app.less
@@ -1,6 +1,7 @@
 body {
     position: relative;
     overflow-x: hidden;
+    background: url(/images/textures/xv/xv.png) repeat;
 }
 body,
 html { height: 100%;}
@@ -8,6 +9,17 @@ html { height: 100%;}
 .nav .open > a:hover, 
 .nav .open > a:focus {background-color: transparent;}
 
+#content {
+  padding-top: 50px;
+}
+
+footer {
+  color: #ccc;
+  font-size: 10pt;
+  margin-top: 20px;
+  padding: 10px;
+  border-top: 1px solid #ddd;
+}
 /*-------------------------------*/
 /*           Wrappers            */
 /*-------------------------------*/
@@ -38,6 +50,15 @@ html { height: 100%;}
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+
+    box-shadow: 0 10px 10px rgba(0,0,0,1);
+
+    font-size: 14pt;
+    .fa {
+      text-align: right;
+      width: 20px;
+      margin-right: 10px;
+    }
 }
 
 #sidebar-wrapper::-webkit-scrollbar {
@@ -49,18 +70,25 @@ html { height: 100%;}
 }
 
 #page-content-wrapper {
-    width: 100%;
-    padding-top: 70px;
+    // width: 100%;
+    // padding-top: 70px;
 }
 
 #wrapper.toggled #page-content-wrapper {
+    width: 70px;
     position: absolute;
     margin-right: -220px;
 }
 
-/*-------------------------------*/
-/*     Sidebar nav styles        */
-/*-------------------------------*/
+
+#about {
+  position: absolute;
+  padding: 10px;
+  bottom: 0px;
+  width: 220px;
+  font-size: 10pt;
+  border-top: 1px solid rgba(0,0,0,.3);
+}
 
 .sidebar-nav {
     position: absolute;
@@ -69,15 +97,20 @@ html { height: 100%;}
     margin: 0;
     padding: 0;
     list-style: none;
+    li {
+      position: relative; 
+      line-height: 20px;
+      display: inline-block;
+      width: 100%;
+    }
 }
 
-.sidebar-nav li {
-    position: relative; 
-    line-height: 20px;
-    display: inline-block;
+.sidebar-nav li.active:before {
     width: 100%;
 }
-
+.sidebar-nav li:not(.active):before {
+    width: 3px;
+}
 .sidebar-nav li:before {
     content: '';
     position: absolute;
@@ -85,13 +118,11 @@ html { height: 100%;}
     left: 0;
     z-index: -1;
     height: 100%;
-    width: 3px;
     background-color: #1c1c1c;
     -webkit-transition: width .2s ease-in;
-      -moz-transition:  width .2s ease-in;
-       -ms-transition:  width .2s ease-in;
-            transition: width .2s ease-in;
-
+    -moz-transition:  width .2s ease-in;
+    -ms-transition:  width .2s ease-in;
+    transition: width .2s ease-in;
 }
 .sidebar-nav li:first-child a {
     color: #fff;
@@ -121,14 +152,16 @@ html { height: 100%;}
 .sidebar-nav li:nth-child(9):before {
     background-color: #35acdf;   
 }
-.sidebar-nav li:hover:before,
-.sidebar-nav li.open:hover:before {
+.sidebar-nav {
+  li:hover:before,
+  li.open:hover:before,
+  li.active {
     width: 100%;
     -webkit-transition: width .2s ease-in;
-      -moz-transition:  width .2s ease-in;
-       -ms-transition:  width .2s ease-in;
-            transition: width .2s ease-in;
-
+    -moz-transition:  width .2s ease-in;
+    -ms-transition:  width .2s ease-in;
+    transition: width .2s ease-in;
+}
 }
 
 .sidebar-nav li a {
@@ -150,15 +183,33 @@ html { height: 100%;}
 }
 
 .sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 20px;
-    line-height: 44px;
-    color: #f8f8f8;
+    height: 80px;
+    font-size: 18pt;
+    // line-height: 44px;
+    color: #eee;
+    // text-align: center;
+    background-color: rgba(255,255,255,0.1);
+    // font-weight: bold;
+    text-shadow: 0 2px 2px #333;
 
+    div {
+          padding-top: 20px;
+          // padding-top: 20px;
+          display: inline-block;
+          small {
+            font-style: italic;
+            font-size: 12pt;
+          }
+    }
     img {
-    	width: 20px;
-    	margin-top: -2px;
-    	margin-right: 8px;
+      // padding-left: 30px;
+      width: 50px;
+      height: 50px;
+      // margin
+      margin: -24px 10px 0 10px;
+      display: inline-block;
+      // margin-top: 10px;
+      // margin-right: 8px;
     }
 }
 .sidebar-nav .dropdown-menu {
@@ -290,15 +341,15 @@ html { height: 100%;}
 /*            Overlay            */
 /*-------------------------------*/
 
-.overlay {
-    position: fixed;
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(250,250,250,.8);
-    z-index: 1;
-}
+// .overlay {
+//     position: fixed;
+//     display: none;
+//     width: 100%;
+//     height: 100%;
+//     top: 0;
+//     left: 0;
+//     right: 0;
+//     bottom: 0;
+//     background-color: rgba(250,250,250,.8);
+//     z-index: 1;
+// }
