--- a/volunteer/app/views/layout.jade
+++ b/volunteer/app/views/layout.jade
@@ -4,15 +4,15 @@ html(lang="en", ng-app="BitToriousVolunteer")
 		meta(charset="utf-8")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
 		meta(name="viewport", content="width=device-width" initial-scale="1.0")
-		meta(name="description", content="BitT")
+		meta(name="description", content="GP 2015 Client")
 		meta(name="author", content="Preston Lee")
 		title BitTorious Volunteer
 		link(rel="stylesheet", href="stylesheets/vendor.css")
 		link(rel="stylesheet", href="stylesheets/theme.css")
 		link(rel="stylesheet", href="stylesheets/app.css")
+		include icons
 		script(src="javascripts/vendor.js")
 		script(src="javascripts/app.js")
-		include icons
 		script.
 			window.brunch = window.brunch || {};
 			window.brunch['auto-reload'] = {
@@ -24,15 +24,28 @@ html(lang="en", ng-app="BitToriousVolunteer")
 			nav.navbar.navbar-inverse.navbar-fixed-top#sidebar-wrapper(role="navigation")
 				ul.nav.sidebar-nav
 					li.sidebar-brand
-						img#logo(src='/images/logo/icon-inverse-128x128.png')
-						span BitTorious Volunteer
-					li
-						a(ui-sref="status")
-							i.fa.fa-bar-chart-o.fa-fw Status
-					li
-						a(ui-href="settings")
-							i.fa.fa-gear.fa-fw Settings
+						img#logo(src='/images/logo/icon-inverse-256x256.png')
+						div
+							| BitTorious
+							br
+							small  Volunteer
+					li(ui-sref-active="active")
+						a(ui-sref="visualize")
+							i.fa.fa-line-chart
+							| Visualizer
+					li(ui-sref-active="active")
+						a(ui-sref="settings")
+							i.fa.fa-cogs
+							| Settings
+					li(ui-sref-active="active")
+						a(ui-sref="about")
+							i.fa.fa-book
+							| About
 
+				#about
+					p This application is maintained by the Biomedical Informatics department in the College of Health Solutions at Arizona State University.
+					a(href="https://bittorious.com") Powered by BitTorious.
+	
 
 			#page-content-wrapper
 				button.hamburger.is-open(type="button", data-toggle="offcanvas")
@@ -40,10 +53,16 @@ html(lang="en", ng-app="BitToriousVolunteer")
 					span.hamb-middle
 					span.hamb-bottom
 			
+			#content.container-fluid(ng-controller="WelcomeController")
+				div(growl)
 				block content
 
 			footer.footer
-				hr
-				p.text-center
-					span.icon.icon-legal Copyright &copy; 2015 Preston Lee. All right reserved.
+				//- hr
+				.text-center
+					| Designed with 
+					span.fa.fa-heart
+					|  by 
+					a(href="https://linkedin.com/in/prestonvictorlee") Preston Lee
+					| . Copyright © #{new Date().getFullYear()}. All right reserved.
 
