Volunteer client development.

--- a/volunteer/app/views/layout.jade
+++ b/volunteer/app/views/layout.jade
@@ -11,6 +11,8 @@ html(lang="en", ng-app="BitToriousVolunteer")
 		link(rel="stylesheet", href="stylesheets/theme.css")
 		link(rel="stylesheet", href="stylesheets/app.css")
 		include icons
+		//- Add Google Maps APP support.
+		script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPaue3svO2VOPGOwEcAGZjzcquHonsl7E")
 		script(src="javascripts/vendor.js")
 		script(src="javascripts/app.js")
 		script.
