--- a/volunteer/app/stylesheets/app.less
+++ b/volunteer/app/stylesheets/app.less
@@ -10,9 +10,13 @@ html { height: 100%;}
 .nav .open > a:focus {background-color: transparent;}
 
 #content {
-  padding-top: 50px;
+  // padding-top: 50px;
 }
 
+#map_canvas {
+  width: 100%;
+  height: 200px;
+}
 footer {
   color: #ccc;
   font-size: 10pt;
