--- a/app/views/welcome/legal.html.slim
+++ b/app/views/welcome/legal.html.slim
@@ -6,7 +6,7 @@
 		  The following terms and conditions (collectively, these "Terms of Service") apply to your use of BitTorious, including any content,
 		  functionality and services offered on or via BitTorious (the "Website"). We want to keep our relationship with you as lean and 	informal as possible,
 		  but please read the Terms of Service carefully before using BitTorious, because by using the Website you accept and agree to be bound 	and abide by these Terms of Service.
-		  Should you disagree with any of the provisions herein, you must leave the Website, but please let us know via the feedback widget 	embedded in the Website.
+		  Should you disagree with any of the provisions herein, you must leave the Website.
 		  We'll be happy to hear your comments and suggestions.
 	
 	section
